[gd_scene load_steps=4 format=3 uid="uid://bb3hhatwxwkat"]

[ext_resource type="Script" path="res://levels/control.gd" id="1_3nkph"]
[ext_resource type="Texture2D" uid="uid://bja0wl8tcw71c" path="res://art/backgrounds/background_01.png" id="2_lwfu4"]

[sub_resource type="LabelSettings" id="LabelSettings_psxdj"]
font_size = 27
outline_size = 6
outline_color = Color(0, 0.4, 0, 1)
shadow_size = 20
shadow_color = Color(0.113725, 0.329412, 0.113725, 0.0901961)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3nkph")

[node name="MenuBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lwfu4")
expand_mode = 2
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -20.0
offset_right = 350.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host :3"

[node name="StartButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="JoinButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join >_<"

[node name="AddIP" type="LineEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Add IP"
alignment = 1

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.5
offset_top = 30.0
offset_right = 40.5
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
text = "Connecting..."
label_settings = SubResource("LabelSettings_psxdj")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
