extends Control


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_host_button_pressed():
	pass # Replace with function body.


func _on_start_button_pressed():
	pass # Replace with function body.


func _on_join_button_pressed():
	pass # Replace with function body.
